Fix broken references and update package for 1.9